[gd_scene load_steps=19 format=2]

[ext_resource path="res://environment/WalkToPoints.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/FadeInOutLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/lamp/shaders/lamp_light.shader" type="Shader" id=3]
[ext_resource path="res://environment/lamp/lamp.gd" type="Script" id=4]
[ext_resource path="res://environment/lamp/shaders/lamp_ripple.shader" type="Shader" id=5]
[ext_resource path="res://environment/lamp/textures/lamp-light.png" type="Texture" id=6]
[ext_resource path="res://environment/lamp/textures/lamp-ripple.png" type="Texture" id=7]
[ext_resource path="res://environment/lamp/textures/lamp.png" type="Texture" id=8]
[ext_resource path="res://environment/lamp/effects/LampEmbers.tscn" type="PackedScene" id=9]
[ext_resource path="res://environment/lamp/save_manager.gd" type="Script" id=10]
[ext_resource path="res://shared/managers/AudioStreamPlayerVisibility.tscn" type="PackedScene" id=11]
[ext_resource path="res://environment/lamp/audio/fire.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/ripple_radius_uv = 0.5
shader_param/ripple_width_uv = 0.1
shader_param/ripple_color = Color( 1, 0.309804, 0.470588, 1 )
shader_param/alpha_multiplier = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/radius_uv = 0.5

[sub_resource type="Animation" id=4]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LampSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("LampSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("LampSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightSprite:material:shader_param/radius_uv")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RippleSprite:material:shader_param/ripple_width_uv")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RippleSprite:material:shader_param/ripple_radius_uv")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RippleSprite:material:shader_param/alpha_multiplier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LampEmbers:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Lamp" type="Area2D" groups=[
"lamps",
]]
collision_layer = 0
script = ExtResource( 4 )

[node name="SaveManager" type="Node" parent="." groups=[
"save",
]]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="RippleSprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 7 )

[node name="LightSprite" type="Sprite" parent="."]
modulate = Color( 1, 0.309804, 0.470588, 0.501961 )
material = SubResource( 3 )
position = Vector2( 0, -24 )
texture = ExtResource( 6 )

[node name="LampSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 8 )
vframes = 2
hframes = 16
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lit = SubResource( 4 )
anims/unlit = SubResource( 5 )
anims/unlit_to_lit = SubResource( 6 )

[node name="FadeInOutLabel" parent="." instance=ExtResource( 2 )]
margin_left = -32.0
margin_right = 32.0

[node name="LampEmbers" parent="." instance=ExtResource( 9 )]
show_behind_parent = true
position = Vector2( 0, -8 )
emitting = false

[node name="RestPoints" parent="." instance=ExtResource( 1 )]

[node name="LightPoints" parent="." instance=ExtResource( 1 )]

[node name="Left" parent="LightPoints" index="0"]
position = Vector2( -10, 0 )

[node name="Right" parent="LightPoints" index="1"]
position = Vector2( 10, 0 )

[node name="FireSound" parent="." instance=ExtResource( 11 )]
max_volume_db = 10.0

[node name="AudioStreamPlayer" parent="FireSound" index="0"]
stream = ExtResource( 12 )
bus = "Effects"

[editable path="RestPoints"]

[editable path="LightPoints"]

[editable path="FireSound"]
